--- a/src/Play.Identity.Service/appsettings.json
+++ b/src/Play.Identity.Service/appsettings.json
@@ -6,7 +6,11 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "IdentityDataContextConnection": "Server=(localdb)\\mssqllocaldb;Database=Play.Identity.Service;Trusted_Connection=True;MultipleActiveResultSets=true"
+  "ServiceSettings": {
+    "ServiceName": "Identity"
+  },
+  "MongoDbSettings": {
+    "Host": "localhost",
+    "Port": 27017
   }
 }
