added seeding logic for user

--- a/src/Play.Identity.Service/appsettings.json
+++ b/src/Play.Identity.Service/appsettings.json
@@ -9,8 +9,35 @@
   "ServiceSettings": {
     "ServiceName": "Identity"
   },
+  "IdentityServerSettings": {
+    "ApiScopes": [
+      {
+        "Name": "catalog.fullaccess"
+      },
+      {
+        "Name": "inventory.fullaccess"
+      },
+      {
+        "Name": "IdentityServerApi"
+      }
+    ],
+    "ApiResources": [
+      {
+        "Name": "Catalog",
+        "Scopes": ["catalog.fullaccess"]
+      },
+      {
+        "Name": "Inventory",
+        "Scopes": ["inventory.fullaccess"]
+      }
+    ]
+  },
   "MongoDbSettings": {
     "Host": "localhost",
     "Port": 27017
+  },
+  "IdentitySettings": {
+    "AdminUserEmail": "admin@play.com",
+    "StartingGil": 100
   }
 }
