--- a/src/Play.Identity.Service/Play.Identity.Service.csproj
+++ b/src/Play.Identity.Service/Play.Identity.Service.csproj
@@ -1,8 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
 
+    <UserSecretsId>a39b5ba1-c4d1-44ef-8bac-8b898dc9e0ab</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
