--- a/src/Play.Identity.Service/appsettings.Development.json
+++ b/src/Play.Identity.Service/appsettings.Development.json
@@ -4,5 +4,23 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "IdentityServerSettings": {
+    "Clients": [
+      {
+        "ClientId": "postman",
+        "AllowedGrantTypes": ["authorization_code"],
+        "RequireClientSecret": false,
+        "RedirectUris": ["urn:ietf:wg:oauth:2.0.oob"],
+        "AllowedScopes": [
+          "openid",
+          "profile",
+          "catalog.fullaccess",
+          "inventory.fullaccess",
+          "IdentityServerApi"
+        ],
+        "AlwaysIncludeUserClaimsInIdToken": true
+      }
+    ]
   }
 }
