added role based authorisation for microservice

--- a/src/Play.Identity.Service/appsettings.json
+++ b/src/Play.Identity.Service/appsettings.json
@@ -24,11 +24,18 @@
     "ApiResources": [
       {
         "Name": "Catalog",
-        "Scopes": ["catalog.fullaccess"]
+        "Scopes": ["catalog.fullaccess"],
+        "UserClaims": ["role"]
       },
       {
         "Name": "Inventory",
-        "Scopes": ["inventory.fullaccess"]
+        "Scopes": ["inventory.fullaccess"],
+        "UserClaims": ["role"]
+      },
+      {
+        "Name": "Identity",
+        "Scopes": ["IdentityServerApi"],
+        "UserClaims": ["role"]
       }
     ]
   },
