--- a/src/Play.Identity.Service/appsettings.json
+++ b/src/Play.Identity.Service/appsettings.json
@@ -15,6 +15,12 @@
         "Name": "catalog.fullaccess"
       },
       {
+        "Name": "catalog.readaccess"
+      },
+      {
+        "Name": "catalog.writeaccess"
+      },
+      {
         "Name": "inventory.fullaccess"
       },
       {
@@ -24,7 +30,11 @@
     "ApiResources": [
       {
         "Name": "Catalog",
-        "Scopes": ["catalog.fullaccess"],
+        "Scopes": [
+          "catalog.fullaccess",
+          "catalog.readaccess",
+          "catalog.writeaccess"
+        ],
         "UserClaims": ["role"]
       },
       {
