--- a/src/Play.Identity.Service/appsettings.Development.json
+++ b/src/Play.Identity.Service/appsettings.Development.json
@@ -5,8 +5,29 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "AllowedOrigin": "http://localhost:3000",
   "IdentityServerSettings": {
     "Clients": [
+      {
+        "ClientId": "frontend",
+        "AllowedGrantTypes": ["authorization_code"],
+        "RequireClientSecret": false,
+        "RedirectUris": ["http://localhost:3000/authentication/login-callback"],
+        "AllowedScopes": [
+          "openid",
+          "profile",
+          "catalog.fullaccess",
+          "catalog.readaccess",
+          "catalog.writeaccess",
+          "inventory.fullaccess",
+          "IdentityServerApi",
+          "roles"
+        ],
+        "AlwaysIncludeUserClaimsInIdToken": true,
+        "PostLogoutRedirectUris": [
+          "http://localhost:3000/authentication/logout-callback"
+        ]
+      },
       {
         "ClientId": "postman",
         "AllowedGrantTypes": ["authorization_code"],
@@ -16,8 +37,11 @@
           "openid",
           "profile",
           "catalog.fullaccess",
+          "catalog.readaccess",
+          "catalog.writeaccess",
           "inventory.fullaccess",
-          "IdentityServerApi"
+          "IdentityServerApi",
+          "roles"
         ],
         "AlwaysIncludeUserClaimsInIdToken": true
       }
