--- a/src/Play.Identity.Service/Play.Identity.Service.csproj
+++ b/src/Play.Identity.Service/Play.Identity.Service.csproj
@@ -13,8 +13,12 @@
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="8.0.0" />
 
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.4" />
-    <PackageReference Include="Play.Common" Version="1.0.2" />
+    <PackageReference Include="Play.Common" Version="1.0.4" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Play.Identity.Contracts\Play.Identity.Contracts.csproj" />
   </ItemGroup>
 
 </Project>
