--- a/src/Play.Identity.Service/appsettings.json
+++ b/src/Play.Identity.Service/appsettings.json
@@ -53,6 +53,9 @@
     "Host": "localhost",
     "Port": 27017
   },
+  "RabbitMQSettings": {
+    "Host": "localhost"
+  },
   "IdentitySettings": {
     "AdminUserEmail": "admin@play.com",
     "StartingGil": 100
