add new exception

--- a/src/Play.Identity.Service/appsettings.Development.json
+++ b/src/Play.Identity.Service/appsettings.Development.json
@@ -20,6 +20,7 @@
           "catalog.readaccess",
           "catalog.writeaccess",
           "inventory.fullaccess",
+          "trading.fullaccess",
           "IdentityServerApi",
           "roles"
         ],
@@ -40,6 +41,7 @@
           "catalog.readaccess",
           "catalog.writeaccess",
           "inventory.fullaccess",
+          "trading.fullaccess",
           "IdentityServerApi",
           "roles"
         ],
