--- a/src/Play.Identity.Service/appsettings.json
+++ b/src/Play.Identity.Service/appsettings.json
@@ -24,6 +24,9 @@
         "Name": "inventory.fullaccess"
       },
       {
+        "Name": "trading.fullaccess"
+      },
+      {
         "Name": "IdentityServerApi"
       }
     ],
@@ -45,6 +48,11 @@
       {
         "Name": "Identity",
         "Scopes": ["IdentityServerApi"],
+        "UserClaims": ["role"]
+      },
+      {
+        "Name": "Trading",
+        "Scopes": ["trading.fullaccess"],
         "UserClaims": ["role"]
       }
     ]
